# RockMeGOD

./: README.md  bank.json  keep_alive.py  main.py  muterole.json  premium.json  pyproject.toml  snipe.json  warn.json
Cogs/: economy.py  image.py  log.py  logs.py  moderation.py  stats.py  top.py
data/: logs.json
